--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,14 @@
     <properties>
         <java.version>1.8</java.version>
 
-        <jetty.version>9.4.15.v20190215</jetty.version>
+        <jetty.version>9.4.17.v20190418</jetty.version>
         <jersey.version>2.28</jersey.version>
         <slf4j.version>1.7.26</slf4j.version>
         <jackson.version>2.9.8</jackson.version>
+        <jakarta.version>2.1.5</jakarta.version>
+        <hibernate.version>5.2.4.Final</hibernate.version>
+        <javax.el.version>2.2.4</javax.el.version>
+        <junit.version>5.4.2</junit.version>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -111,39 +115,35 @@
         <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>2.1.5</version>
+            <version>${jakarta.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.2.4.Final</version>
+            <version>${hibernate.version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
-            <version>2.2.4</version>
+            <version>${javax.el.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>javax.el</artifactId>
-            <version>2.2.4</version>
+            <version>${javax.el.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
+
     </dependencies>
 
     <build>
